--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.7.0",
+    "mkdocstrings>=1.0.0",
+    "mkdocstrings-python>=2.0.1",
     "pytest>=8.4.2",
     "ruff>=0.14.0",
 ]
