--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,16 @@ theme:
     - content.tooltips
     - toc.integrate
 
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.details
+
 plugins:
 - search
 - mkdocstrings
