--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
       - name: Run tests
-        run: uv run pytest tests
+        run: uv run pytest
       # - name: Build
       #   run: uv build
       # Check that basic features work and we didn't miss to include crucial files
