--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dev = [
     "types-openpyxl>=3.1.5.20250919",
     "types-python-dateutil>=2.9.0.20251115",
     "types-xlrd>=2.0.0.20251020",
+    "pytest-mock>=3.15.1",
 ]
 
 [tool.pytest.ini_options]
