--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
   
   coverage:
     runs-on: ubuntu-latest
+    needs: tests
     permissions:
       pull-requests: write
       contents: read
