--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,14 +25,9 @@ jobs:
         run: uv build
       - name: Run tests
         run: uv run pytest
-      - name: Store version in environment
-        run: |
-          PKG_VERSION=$(uv version | sed 's|^glass-onion ||')
-          PKG_VERSION=$(echo "$PKG_VERSION" | xargs)
-          echo "PKG_VERSION=${PKG_VERSION}" >> $GITHUB_ENV
       - name: Smoke test (wheel)
-        run: uv run --isolated --no-project --with dist/glass_onion_${{ env.PKG_VERSION }}-py3-none-any.whl tests/integration/test_packaging.py
+        run: uv run --isolated --no-project --with dist/*.whl tests/integration/test_packaging.py
       - name: Smoke test (source distribution)
-        run: uv run --isolated --no-project --with dist/glass_onion_${{ env.PKG_VERSION }}.tar.gz tests/integration/test_packaging.py
+        run: uv run --isolated --no-project --with dist/*.tar.gz tests/integration/test_packaging.py
       - name: Publish
         run: uv publish
