--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,15 +15,15 @@ on:
 
 jobs:
   tests:
-    strategy:
+    strategy: 
       fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12"]
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        python-version: ["3.11", "3.12", "3.13"]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install Python 3.11
@@ -31,16 +31,47 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
       - name: Run tests
-        run: uv run pytest tests
-      # - name: Build
-      #   run: uv build
-      # Check that basic features work and we didn't miss to include crucial files
-    #   - name: Smoke test (wheel)
-    #     run: uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
-    #   - name: Smoke test (source distribution)
-    #     run: uv run --isolated --no-project --with dist/*.tar.gz tests/smoke_test.py
+        run: uv run pytest
+      - name: Build
+        run: uv build
   
-
+  coverage:
+    runs-on: ubuntu-latest
+    needs: tests
+    permissions:
+      pull-requests: write
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+      - name: Install Python 3.11
+        run: uv python install 3.11
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: Run tests
+        run: uv run pytest --cov=glass_onion --cov-report=html --cov-report=xml
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: coverage.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: false
+          indicators: true
+          output: both
+          thresholds: '60 80'
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          hide_and_recreate: true
+          hide_classify: "OUTDATED"
+          path: code-coverage-results.md
+    
   deploy:
     concurrency: "1"
     runs-on: ubuntu-latest
