--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Glass Onion v0.1
+site_name: Glass Onion
 repo_url: https://github.com/USSoccerFederation/glass_onion
 repo_name: 'USSoccerFederation/glass_onion'
 edit_uri: blob/main/docs/
