docs: fix broken images [skip ci]

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: Glass Onion
 site_author: United States Soccer Federation
 site_description: Simplifying soccer object identifier synchronization.
+site_url: https://ussoccerfederation.github.io/glass_onion
 repo_url: https://github.com/USSoccerFederation/glass_onion
 repo_name: 'USSoccerFederation/glass_onion'
 edit_uri: blob/main/docs/
@@ -42,6 +43,7 @@ plugins:
 - mkdocstrings
 - autorefs
 - markdown-exec
+- site-urls
 
 nav:
   - Home: index.md
